_src/assets/styles/components/article.scss
.article {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    padding-top: $layout-spacing;
    padding-bottom: $layout-spacing;
  }

  a {
    border-bottom: 1px solid $black;
  }

  .image--loading {
    max-width: 600px;
    height: 400px;

    background-color: $black;
  }

  p + .image,
  .image + p {
    margin-top: $layout-spacing;
  }
}

@media (max-width: $mobile-breakpoint) {
  .article {
    .image--loading {
      height: 150px;
    }
  }
}

